# ll1gen

./: CMakeLists.txt  README.md  update_test_files.sh
doc/: example_descriptor.txt  std_test0.txt  std_test1.txt  std_test2.txt  test1.txt  test2.txt  test3.txt
doc/json/: deserialize_bool.t  deserialize_normal_field.t  deserialize_ref_vector.t  deserialize_ref_vector_bool.t  deserialize_ref_vector_string.t  deserialize_sptr_bool.t  deserialize_sptr_normal_field.t  deserialize_sptr_string.t  deserialize_string.t  deserialize_vector.t  deserialize_vector_bool.t  deserialize_vector_string.t  json_bean_template.t  ref_getter_content.t  serialize_bool.t  serialize_normal_field.t  serialize_ref_vector.t  serialize_ref_vector_bool.t  serialize_ref_vector_string.t  serialize_sptr_bool.t  serialize_sptr_normal_field.t  serialize_sptr_string.t  serialize_string.t  serialize_vector.t  serialize_vector_bool.t  serialize_vector_string.t  std_constructor_assign.t  std_constructor_param.t  std_copyconstructor_assign.t  std_getter_content.t  std_opeq_assign.t
include/: ftemplate.hpp  generator.hpp  json_generator.hpp  json_utils.hpp  spec_parser.hpp  specification.hpp
src/: CMakeLists.txt  ftemplate.cpp  generator.cpp  json_generator.cpp  main.cpp  spec_parser.cpp
test/: CMakeLists.txt  _template.hpp  ex0.json  good.desc  hellobean.hpp  test2multi.hpp  test2simple.hpp  test_2Multi.cpp  test_2Simple.cpp  test_3ArrRef.cpp  test_HelloBean.cpp  test_spec_parser.cpp  test_stdex0.cpp  test_stdex1.cpp  test_stdex2.cpp  test_template.cpp  testnevecs.hpp  testperson.hpp
test/ex0/: gamer.hpp  gamerrel.hpp  score.hpp  weapon.hpp
test/ex1/: glossary.hpp  glossarydefinition.hpp  glossarydiv.hpp  glossaryentry.hpp  glossarylist.hpp  glossaryroot.hpp
test/ex2/: menu.hpp  menuitem.hpp  menuroot.hpp
